# dockerized-pytest-course

./: .gitignore  pyproject.toml  pytest.ini  setup.py
scripts/chp2/video2/: mapmaker_end.py
tests/chp2/video2/: test_mapmaker_start.py
